<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/room_bg" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:alpha="0.8"
        android:background="@drawable/background_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/rentickle"
        android:textColor="@color/white"
        android:textSize="@dimen/_25ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/search_bg"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner">

        <ImageView
            android:id="@+id/search_image"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_search" />

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/search_edit_text"
            android:layout_width="0dp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@android:color/transparent"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/search_for_furniture_appliances_etc"
            android:imeOptions="actionSearch"
            android:inputType="textAutoComplete"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancel"
            app:layout_constraintStart_toEndOf="@+id/search_image"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/cancel"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/our_category"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_190sdp"
                android:layout_margin="@dimen/_15sdp"
                android:background="@drawable/search_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/category" />

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/_5sdp"
                app:constraint_referenced_ids="bed,living,camera,app,storage,pack"
                app:flow_horizontalGap="@dimen/_30sdp"
                app:flow_horizontalStyle="spread"
                app:flow_verticalGap="@dimen/_10sdp"
                app:flow_wrapMode="aligned"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view" />

            <ImageView
                android:id="@+id/bed"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                app:srcCompat="@drawable/ic_bed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bed_room"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/text_color"
                app:layout_constraintEnd_toEndOf="@+id/bed"
                app:layout_constraintStart_toStartOf="@+id/bed"
                app:layout_constraintTop_toBottomOf="@id/bed" />

            <ImageView
                android:id="@+id/living"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                app:layout_constraintEnd_toStartOf="@id/bed"
                app:srcCompat="@drawable/ic_room" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/living_room"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/text_color"
                app:layout_constraintEnd_toEndOf="@+id/living"
                app:layout_constraintStart_toStartOf="@+id/living"
                app:layout_constraintTop_toBottomOf="@id/living" />

            <ImageView
                android:id="@+id/camera"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                app:layout_constraintStart_toEndOf="@+id/living"
                app:srcCompat="@drawable/ic_camera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dslr_camera"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/text_color"
                app:layout_constraintEnd_toEndOf="@+id/camera"
                app:layout_constraintStart_toStartOf="@+id/camera"
                app:layout_constraintTop_toBottomOf="@id/camera" />

            <ImageView
                android:id="@+id/app"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                app:layout_constraintTop_toBottomOf="@+id/bed"
                app:srcCompat="@drawable/ic_laundry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appliances"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/text_color"
                app:layout_constraintEnd_toEndOf="@+id/app"
                app:layout_constraintStart_toStartOf="@+id/app"
                app:layout_constraintTop_toBottomOf="@id/app" />

            <ImageView
                android:id="@+id/storage"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                app:layout_constraintStart_toEndOf="@+id/app"
                app:srcCompat="@drawable/ic_storage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storage"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/text_color"
                app:layout_constraintEnd_toEndOf="@+id/storage"
                app:layout_constraintStart_toStartOf="@+id/storage"
                app:layout_constraintTop_toBottomOf="@id/storage" />

            <ImageView
                android:id="@+id/pack"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                app:srcCompat="@drawable/ic_pack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pack"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/text_color"
                app:layout_constraintEnd_toEndOf="@+id/pack"
                app:layout_constraintStart_toStartOf="@+id/pack"
                app:layout_constraintTop_toBottomOf="@id/pack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appliances"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="@+id/app"
                app:layout_constraintStart_toStartOf="@+id/app"
                app:layout_constraintTop_toBottomOf="@id/app" />

            <TextView
                android:id="@+id/products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/trending_products"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/flow" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_trending"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/products" />

            <TextView
                android:id="@+id/recent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/recent_products"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recycler_trending" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_recent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>